--- a/content/w15.html
+++ b/content/w15.html
@@ -142,8 +142,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> << <a href='.html'>Previous</a> <a href='課程-1.html'>Next</a> >> 課程-1<br /><h1>cEX</h1>
-<br /> << <a href='.html'>Previous</a> <a href='課程-1.html'>Next</a> >> 課程-1</div>
+    <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='.html'>Next</a> >> <br /><h1>w15</h1>
+<br />w13 << <a href='w13.html'>Previous</a> <a href='.html'>Next</a> >> </div>
         
     <!-- footer -->
       <div class="container">
