--- a/content/.html
+++ b/content/.html
@@ -142,8 +142,242 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> << <a href='.html'>Previous</a> <a href='課程-1.html'>Next</a> >> 課程-1<br /><h1>cEX</h1>
-<br /> << <a href='.html'>Previous</a> <a href='課程-1.html'>Next</a> >> 課程-1</div>
+    <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX<br /><h1></h1>
+<p>第一題</p>
+<p><span>根據 </span><a href="https://nfuedu-my.sharepoint.com/:u:/g/personal/yen_nfu_edu_tw/EVcefUI2zPpAmP6lnLWLEAoBCBznMnvFpsNE-1VVFGvVZQ?e=goiPpP&amp;isSPOFile=1">roc_list_coord_flag.7z</a><span><span> </span>程式內容所印出的六組 ABED 等繪製 ROC 國旗白日圖案中的菱形四個關鍵點, 請直接在青天與滿地紅的圖案中, 利用白色作為畫線顏色, 將第二組的 ABED 等四個點的座標, 以直線相連.</span></p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;gd.h&gt;
+#include &lt;math.h&gt;
+ 
+void draw_roc_flag(gdImagePtr img);
+void draw_white_sun(gdImagePtr img, int x, int y, int size, int color);
+ 
+int main() {
+    // width 3: height 2
+    int width = 1200;
+    // 國旗長寬比為 3:2
+    int height = (int)(width * 2.0 / 3.0);
+ 
+    gdImagePtr img = gdImageCreateTrueColor(width, height);
+    gdImageAlphaBlending(img, 0);
+ 
+    draw_roc_flag(img);
+ 
+    FILE *outputFile = fopen("roc_flag_in_gd.png", "wb");
+    if (outputFile == NULL) {
+        fprintf(stderr, "Error opening the output file.\n");
+        return 1;
+    }
+    gdImagePngEx(img, outputFile, 9);
+    fclose(outputFile);
+    gdImageDestroy(img);
+    return 0;
+}
+ 
+void draw_roc_flag(gdImagePtr img) {
+    int width = gdImageSX(img);
+    int height = gdImageSY(img);
+    int red, white, blue;
+ 
+    // 白日位於青天面積正中央, 因此中心點座標為長寬各 1/4 處
+    int center_x = (int)(width / 4);
+    int center_y = (int)(height / 4);
+ 
+    int sun_radius = (int)(width / 8);
+    int white_circle_dia = sun_radius;
+    int blue_circle_dia = white_circle_dia + white_circle_dia * 2 / 15;
+ 
+    red = gdImageColorAllocate(img, 255, 0, 0); // 紅色
+    white = gdImageColorAllocate(img, 255, 255, 255); // 白色
+    blue = gdImageColorAllocate(img, 0, 0, 149); // 藍色
+ 
+    gdImageFilledRectangle(img, 0, 0, width, height, red);
+    gdImageFilledRectangle(img, 0, 0, (int)(width / 2.0), (int)(height / 2.0), blue);
+    draw_white_sun(img, center_x, center_y, sunS_radius, white);
+    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
+    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
+ 
+    // 在青天與滿地紅的圖案中以白色畫線繪製連接菱形的四個關鍵點
+    gdImageSetThickness(img, 10); // 設置線條粗度為10
+    gdImageLine(img, 429, 125, 279, 165, white);
+    gdImageLine(img, 279, 165, 170, 274, white);
+    gdImageLine(img, 170, 274, 170, 274, white);
+    gdImageLine(img, 429, 125, 170, 274, white); // 加入第四條連線
+}
+void draw_white_sun(gdImagePtr img, int x, int y, int size, int color) {
+    // 實現 draw_white_sun 函數的內容
+    // 可以在此處繪製白日的內部圖案
+}
+</pre>
+<p>第二題</p>
+<p><span>請列出第二組 ABED 的四條直線與白日中的大圓所相交 (intersect) 的四個點座標.</span></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
+#include &lt;gd.h&gt;
+#include &lt;math.h&gt;
+
+// 定義座標結構
+typedef struct {
+    double x;
+    double y;
+} Point;
+
+void draw_roc_flag(gdImagePtr img);
+void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, int color);
+
+// 計算圓與線的交點
+void circleLineIntersection(double h, double k, double r, double x1, double y1, double x2, double y2);
+
+int main() {
+    // 設定圖片寬度和高度
+    int width = 1200;
+    int height = (int)(width * 2.0 / 3.0);
+
+    gdImagePtr img = gdImageCreateTrueColor(width, height);
+    gdImageAlphaBlending(img, 0);
+
+    draw_roc_flag(img);
+
+    FILE *outputFile = fopen("roc_flag_in_gd.png", "wb");
+    if (outputFile == NULL) {
+        fprintf(stderr, "Error opening the output file.\n");
+        return 1;
+    }
+    gdImagePngEx(img, outputFile, 9);
+    fclose(outputFile);
+    gdImageDestroy(img);
+    return 0;
+}
+
+void draw_roc_flag(gdImagePtr img) {
+    int width = gdImageSX(img);
+    int height = gdImageSY(img);
+    int red, white, blue;
+    int center_x = (int)(width / 4);
+    int center_y = (int)(height / 4);
+    int sun_radius = (int)(width / 8);
+    int white_circle_dia = sun_radius;
+    int blue_circle_dia = white_circle_dia + white_circle_dia * 2 / 15;
+    red = gdImageColorAllocate(img, 255, 0, 0);
+    white = gdImageColorAllocate(img, 255, 255, 255);
+    blue = gdImageColorAllocate(img, 0, 0, 149);
+
+    gdImageFilledRectangle(img, 0, 0, width, height, red);
+    gdImageFilledRectangle(img, 0, 0, (int)(width / 2.0), (int)(height / 2.0), blue);
+
+    draw_white_sun(img, center_x, center_y, sun_radius, white);
+
+    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
+    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
+
+    // 連接第二組ABED的白線
+    int ax = 429;
+    int ay = 125;
+    int bx = 279;
+    int by = 165;
+    int ex = 170;
+    int ey = 274;
+    int dx = 170;
+    int dy = 274;
+
+    // 設定線條寬度
+    gdImageSetThickness(img, 3);
+
+    gdImageLine(img, ax, ay, bx, by, white);
+    gdImageLine(img, bx, by, ex, ey, white);
+    gdImageLine(img, ex, ey, dx, dy, white);
+    gdImageLine(img, dx, dy, ax, ay, white);
+
+    // 新增連線 (ax, ay) 到 (dx, dy)
+    gdImageLine(img, ax, ay, dx, dy, white);
+
+    // 恢復預設線條寬度
+    gdImageSetThickness(img, 1);
+
+    // 利用一個藍色大圓與白色小圓畫出藍色環狀
+    gdImageFilledEllipse(img, center_x, center_y, blue_circle_dia, blue_circle_dia, blue);
+    gdImageFilledEllipse(img, center_x, center_y, white_circle_dia, white_circle_dia, white);
+
+    // 圓的參數
+    double circle_x = (int)(width / 4); // 圓心 x 座標
+    double circle_y = (int)(height / 4); // 圓心 y 座標
+    double radius = white_circle_dia + white_circle_dia * 2 / 15; // 圓半徑
+
+    // 兩點座標
+    double x3 = 170;
+    double y3 = 274;
+    double x4 = 279;
+    double y4 = 165;
+
+    // 計算圓與線段 (x3, y3) 到 (x4, y4) 的交點
+    circleLineIntersection(circle_x, circle_y, radius, x4, y4, x3, y3);
+
+    double x5 = 279;
+    double y5 = 165;
+    double x6 = 429;
+    double y6 = 125;
+
+    // 計算圓與線段 (x6, y6) 到 (x5, y5) 的交點
+    circleLineIntersection(circle_x, circle_y, radius, x6, y6, x5, y5);
+}
+
+void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, int color) {
+    float deg = M_PI / 180;
+    float sr = sun_radius / tan(75 * deg);
+    int ax, ay, bx, by, dx, dy, ex, ey;
+    gdPoint points[4];
+
+    ax = center_x;
+    ay = center_y - sun_radius;
+    bx = center_x - sun_radius * tan(15 * deg);
+    by = center_y;
+    ex = center_x;
+    ey = center_y + sun_radius;
+    dx = center_x + sun_radius * tan(15 * deg);
+    dy = center_y;
+
+    for (int i = 1; i &lt;= 6; i++) {
+        points[0].x = ax + sun_radius * sin(30 * deg * i);
+        points[0].y = ay + sun_radius - sun_radius * cos(30 * deg * i);
+
+        points[1].x = bx + sr - sr * cos(30 * deg * i);
+        points[1].y = by - sr * sin(30 * deg * i);
+
+        points[2].x = ex - sun_radius * sin(30 * deg * i);
+        points[2].y = ey - (sun_radius - sun_radius * cos(30 * deg * i));
+
+        points[3].x = dx - (sr - sr * cos(30 * deg * i));
+        points[3].y = dy + sr * sin(30 * deg * i);
+
+        gdImageFilledPolygon(img, points, 4, color);
+        gdImagePolygon(img, points, 4, color);
+    }
+}
+
+void circleLineIntersection(double h, double k, double r, double x1, double y1, double x2, double y2) {
+    double m = (y2 - y1) / (x2 - x1);
+    double b = y1 - m * x1;
+    double A = 1 + pow(m, 2);
+    double B = 2 * (m * b - m * k - h);
+    double C = pow(k, 2) - pow(r, 2) + pow(h, 2) - 2 * b * k + pow(b, 2);
+
+    double discriminant = pow(B, 2) - 4 * A * C;
+    if (discriminant &gt; 0) {
+        double x_intersect1 = (-B + sqrt(discriminant)) / (2 * A);
+        double y_intersect1 = m * x_intersect1 + b;
+        printf("交點: (%.2f, %.2f)\n", x_intersect1, y_intersect1);
+
+        double x_intersect2 = (-B - sqrt(discriminant)) / (2 * A);
+        double y_intersect2 = m * x_intersect2 + b;
+        printf("交點: (%.2f, %.2f)\n", x_intersect2, y_intersect2);
+    } else if (discriminant == 0) {
+        double x_intersect = -B / (2 * A);
+        double y_intersect = m * x_intersect + b;
+        printf("交點: (%.2f, %.2f)\n", x_intersect, y_intersect);
+    } else {
+        printf("No points.\n");
+    }
+}</pre>
+<br />w15 << <a href='w15.html'>Previous</a> <a href='cEX.html'>Next</a> >> cEX</div>
         
     <!-- footer -->
       <div class="container">
