--- a/content/練習1.html
+++ b/content/練習1.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程-1.html'>課程-1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程-2.html'>課程-2</a><li><a href='練習.html'>練習</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='.html'></a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程-1.html'>課程-1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程-2.html'>課程-2</a><li><a href='練習.html'>練習</a></li>
                       </ul>
                 </nav>
               </div>
@@ -438,7 +438,8 @@ int main()
     return 0;
 }
 </pre>
-<p><img alt="" height="274" src="./../images/螢幕擷取畫面 2023-12-27 220743.png" width="215"/></p><br />課程-1 << <a href='課程-1.html'>Previous</a> <a href='ANSIC.html'>Next</a> >> ANSIC</div>
+<p><img alt="" height="274" src="./../images/螢幕擷取畫面 2023-12-27 220743.png" width="215"/></p>
+<br />課程-1 << <a href='課程-1.html'>Previous</a> <a href='ANSIC.html'>Next</a> >> ANSIC</div>
         
     <!-- footer -->
       <div class="container">
