--- a/config/content.htm
+++ b/config/content.htm
@@ -904,13 +904,14 @@ int main() {
 </pre>
 <p><span style="vertical-align: inherit;"><br/><img alt="" height="300" src="/images/hellogd.png" width="400"/></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">先設定hello.c的檔</span></span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">#include &lt;stdio.h&gt;</span></span><span></span>
-<span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-int main()</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-{</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-printf("你好世界\n");</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-}</span></span></pre>
-<h4><br/><br/></h4>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">  #include &lt;stdio.h&gt;
+
+int main()
+{
+    printf("hello world\n");
+}</pre>
+<h4><br/><br/><br/></h4>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後再shell打cc hello.c會出現這個</span></span></p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2023-12-21 022524.png" width="400"/></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後要回車這樣replit就會幫我準備好c</span></span></p>
@@ -1292,7 +1293,7 @@ void circleLineIntersection(double h, double k, double r, double x1, double y1, 
     }
 }</pre>
 <h1>cEX</h1>
-<h2>課程</h2>
+<h2>課程1</h2>
 <p><video controls="controls" height="641" width="1000">
 <source src="/images/12.mp4" type="video/mp4"/></video></p>
 <p><br/><span style="vertical-align: inherit;"></span></p>
@@ -2047,7 +2048,7 @@ int main()
 </pre>
 <p><img alt="" height="274" src="/images/螢幕擷取畫面 2023-12-27 220743.png" width="215"/></p>
 <h1>ANSIC</h1>
-<h2>課程</h2>
+<h2>課程2</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 #include &lt;string.h&gt;
 
@@ -2456,7 +2457,7 @@ int main() {
 <source src="/images/10.mp4" type="video/mp4"/></video></p>
 <p></p>
 <p></p>
-<h2>練習</h2>
+<h2>練習2</h2>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">#include &lt;stdio.h&gt;
 
 int main() {
