--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -904,13 +904,14 @@ int main() {
 </pre>
 <p><span style="vertical-align: inherit;"><br/><img alt="" height="300" src="/images/hellogd.png" width="400"/></span></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">先設定hello.c的檔</span></span></p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">#include &lt;stdio.h&gt;</span></span><span></span>
-<span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-int main()</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-{</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-printf("你好世界\n");</span></span><span></span><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">
-}</span></span></pre>
-<h4><br/><br/></h4>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false"></pre>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">  #include &lt;stdio.h&gt;
+
+int main()
+{
+    printf("hello world\n");
+}</pre>
+<h4><br/><br/><br/></h4>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後再shell打cc hello.c會出現這個</span></span></p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2023-12-21 022524.png" width="400"/></p>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">然後要回車這樣replit就會幫我準備好c</span></span></p>
@@ -1054,11 +1055,7 @@ return 0;
 }</pre>
 </div>
 <p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><img alt="" height="200" src="/images/motion_plot.png" width="400"/></span></span></span></span></span></span></span></span></span></span></span></span></span></span></p>
-<p></p>
-<p></p>
-<p><br/><br/><br/></p>
 <h1>w15</h1>
-<p></p>
 <h1><video controls="controls" height="641" width="1000">
 <source src="/images/計算機概論.mp4" type="video/mp4"/></video></h1>
 <p>第一題</p>
